# crocodile

./: .gitignore  CMakeLists.txt  build.sh  makefile
include/: Application.h  component.h  serial.h  trace.h
lib/: libEGL.dylib
src/: main.cpp  test.cpp
test/: build  test.cpp
